<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="@dimen/spacing_mlarge"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnBack"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/add_data"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">


            <RelativeLayout
                android:id="@+id/relPhoto"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_xxlarge">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hardwareAccelerated="false"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="@dimen/border_width"
                    />

                <RelativeLayout
                    android:layout_width="123dp"
                    android:layout_height="123dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_fill_gray_transparent" />


                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="47dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_camera" />

            </RelativeLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="@dimen/font_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="@dimen/font_small" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_middle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/gender"
                android:textSize="@dimen/font_extra_small" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/male"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/female"
                    android:layout_marginEnd="@dimen/spacing_middle"
                    tools:targetApi="lollipop" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="@dimen/font_small"
                    android:maxLength="15"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlaceOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/born_place"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="@dimen/font_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/born_date"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="@dimen/font_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/address"
                    android:inputType="textMultiLine|textCapWords"
                    android:maxLines="3"
                    android:singleLine="false"
                    android:textSize="@dimen/font_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_middle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/profesion"
                android:textSize="@dimen/font_extra_small" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spProfesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="-5dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_middle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/hobby"
                android:textSize="@dimen/font_extra_small" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_size_button"
                android:layout_marginTop="@dimen/spacing_middle"
                android:background="@drawable/bg_fill_blue_rounded"
                android:fontFamily="@font/montserrat_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:stateListAnimator="@null"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_small"
                tools:ignore="UnusedAttribute"
                tools:targetApi="m" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>