<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkWhite"
    android:orientation="vertical"
    tools:context=".activity.student.StudentActivity">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="@dimen/spacing_mlarge"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnBack"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/student_detail"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/spacing_large"
            android:src="@drawable/ic_delete" />

        <ImageView
            android:id="@+id/btnEdit"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_toStartOf="@+id/btnDelete"
            android:padding="@dimen/spacing_large"
            android:src="@drawable/ic_edit" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/rivSlipPhoto"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/png_male" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:fontFamily="@font/raleway_regular"
                    android:text="@string/full_name"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/font_extra_small" />

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Kaloz Fauzan"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_small" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_small"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:background="@color/lightGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/raleway_regular"
                        android:text="@string/gender"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_extra_small" />

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Laki-laki"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_small" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/raleway_regular"
                        android:text="Tempat Tanggal Lahir"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_extra_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvBornAt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="Bogor"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/font_small" />

                        <TextView
                            android:id="@+id/tvBirthDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="16 Februari 1945"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/font_small" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_small"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:background="@color/lightGray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/raleway_regular"
                        android:text="@string/phone_number"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_extra_small" />

                    <TextView
                        android:id="@+id/tvPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="0823922932983"

                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_small" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/raleway_regular"
                        android:text="@string/address"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_extra_small" />

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Jl. Padjajaran"

                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_small" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_small"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:background="@color/lightGray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/raleway_regular"
                        android:text="@string/hobby"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_extra_small" />

                    <TextView
                        android:id="@+id/tvHobby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Memancing"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_small" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/raleway_regular"
                        android:text="@string/profesion"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_extra_small" />

                    <TextView
                        android:id="@+id/tvProfesion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Bisnis"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_small" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>